[gd_scene load_steps=4 format=2]

[ext_resource path="res://Powerups/Powerup.gd" type="Script" id=1]
[ext_resource path="res://Powerups/shield.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.09909, 4.63859 )

[node name="Powerup" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.52588e-05, 0.237823 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
[connection signal="body_entered" from="." to="." method="_on_Powerup_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Powerup_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
